--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ group=org.ballerinalang
 version=2201.11.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.11.0-20241117-133400-a3054b77
-ballerinaJreVersion=3.0.0
+ballerinaLangVersion=2201.11.0-20241121-075100-c4c87cbc
+ballerinaJreVersion=2.0.1
 dependencyJREVersion=jdk-21.0.5+11-jre
 specVersion=2024R1
 slf4jVersion=1.7.30
@@ -13,88 +13,89 @@ balstdlibBranch=master
 devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
-stdlibIoVersion=1.6.2-20241112-233100-995cf5f
-stdlibJavaArraysVersion=1.4.1-20241112-232800-f3adad7
-stdlibTimeVersion=2.6.0-20241113-073800-201b904
-stdlibUrlVersion=2.4.1-20241113-073900-335ff51
-stdlibXmldataVersion=2.8.1-20241112-235200-752b9bc
-observeVersion=1.4.0-20241113-092000-b83ae74
-stdlibMathVectorVersion=1.0.3-20241112-233200-6a39cd1
-stdlibLdapVersion=1.1.0-20241113-084300-d6cc91d
+stdlibIoVersion=1.7.0-20241121-173300-0fbd5d4
+stdlibJavaArraysVersion=1.5.0-20241121-170900-f0de938
+stdlibTimeVersion=2.6.0-20241122-120400-97742a7
+stdlibUrlVersion=2.5.0-20241122-120400-67af694
+stdlibXmldataVersion=2.9.0-20241122-131100-9b834bd
+stdlibMathVectorVersion=1.1.0-20241121-174700-b041a0e
+observeVersion=1.4.0-20241122-184200-c596093
 
 # Stdlib Level 02
-stdlibAvroVersion=1.0.3-20241113-081200-95b592a
-stdlibConstraintVersion=1.6.0-20241113-090900-d276ad5
-stdlibCryptoVersion=2.7.3-20241113-081400-d015a39
-stdlibDataXmldataVersion=1.0.1-20241113-122800-f4e815c
-stdlibLogVersion=2.10.1-20241113-120000-4577868
-stdlibOsVersion=1.8.1-20241113-122000-cca973b
-stdlibProtobufVersion=1.6.2-20241113-122200-13cac06
-stdlibPersistVersion=1.4.1-20241113-122000-306cc63
-stdlibRandomVersion=1.5.1-20241113-122300-1bc770e
-stdlibTaskVersion=2.5.1-20241113-123500-f905281
-stdlibXsltVersion=2.7.1-20241113-123200-11dc649
-observeInternalVersion=1.3.1-20241113-101700-265054d
+stdlibAvroVersion=1.1.0-20241122-123200-afb9674
+stdlibConstraintVersion=1.6.0-20241122-133100-98689e2
+stdlibCryptoVersion=2.8.0-20241122-130800-24f1267
+stdlibDataXmldataVersion=1.1.0-20241122-195700-b63fee2
+stdlibLogVersion=2.11.0-20241122-150100-2e1a3ca
+stdlibOsVersion=1.9.0-20241122-071800-1fae486
+stdlibPersistVersion=1.5.0-20241122-123800-2ae4d59
+stdlibProtobufVersion=1.7.0-20241125-093700-762f021
+stdlibRandomVersion=1.6.0-20241122-130800-df3a582
+stdlibTaskVersion=2.6.0-20241122-124800-cb84357
+stdlibXsltVersion=2.8.0-20241122-143500-88c9238
+observeInternalVersion=1.4.0-20241122-185200-9e5b1bb
 
 # Stdlib Level 03
-stdlibCacheVersion=3.8.1-20241113-125700-b75a1bf
-stdlibFileVersion=1.10.1-20241113-151700-e1a2e38
-stdlibFtpVersion=2.11.1-20241113-154100-5317889
-stdlibMimeVersion=2.10.2-20241113-154200-d953747
-stdlibTcpVersion=1.12.0-20241120-110300-de99389
-stdlibUdpVersion=1.11.1-20241113-154800-7443083
-stdlibUuidVersion=1.8.1-20241113-154400-443c67b
+stdlibCacheVersion=3.9.0-20241122-182900-c956a97
+stdlibFileVersion=1.11.0-20241122-180900-dff344c
+stdlibFtpVersion=2.12.0-20241122-211900-c089ea8
+stdlibLdapVersion=1.2.0-20241122-183100-2b65a6a
+stdlibMimeVersion=2.11.0-20241125-094600-bbddf94
+stdlibTcpVersion=1.12.0-20241122-183100-3fafa49
+stdlibUdpVersion=1.12.0-20241122-185800-71d3277
+stdlibUuidVersion=1.9.0-20241125-110300-5eb185d
 
 # Stdlib Level 04
-stdlibAuthVersion=2.12.1-20241113-162300-ded40eb
-stdlibDataJsondataVersion=0.3.0-20241119-191600-348e6c9
-stdlibDataYamlVersion=0.1.1-20241113-122600-5fd87f8
-stdlibEdiVersion=1.3.1-20241113-171300-d9e62c8
-stdlibEmailVersion=2.10.1-20241113-171700-4b2c1fd
-stdlibJwtVersion=2.13.1-20241113-162400-b59ccfa
-stdlibMqttVersion=1.2.1-20241113-190800-260cda7
-stdlibOAuth2Version=2.12.1-20241113-162400-4c6ddfe
-stdlibTomlVersion=0.6.1-20241113-170100-f224cf6
-stdlibYamlVersion=0.6.1-20241113-171500-62c6f03
+stdlibAuthVersion=2.13.0-20241125-094500-d380c71
+stdlibDataCsvVersion=0.7.0-20241127-103000-4aa1acb
+stdlibDataJsondataVersion=1.0.0-20241125-114000-0c2f457
+stdlibDataYamlVersion=0.7.0-20241127-103000-78a1dfa
+stdlibEdiVersion=1.4.0-20241125-112000-29a3e84
+stdlibEmailVersion=2.11.0-20241125-201500-229ff6e
+stdlibJwtVersion=2.14.0-20241125-085500-10a9526
+stdlibMqttVersion=1.3.0-20241125-130000-19470f5
+stdlibOAuth2Version=2.13.0-20241126-071700-7eb9e0b
+stdlibTomlVersion=0.7.0-20241125-114000-c99336b
+stdlibYamlVersion=0.7.0-20241125-121700-09f7b69
 
 # Stdlib Level 05
-stdlibHttpVersion=2.13.0-20241114-182900-7e9f66a
+stdlibHttpVersion=2.13.0-20241126-181000-6585cc5
 
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.13.0-20241114-195700-5188f60
-stdlibSoapVersion=2.1.0-20241116-112000-3dd2c94
-stdlibTransactionVersion=1.10.1-20241116-112500-189a4e5
-stdlibWebsocketVersion=2.13.0-20241116-202000-ddd958d
-stdlibWebsubVersion=2.13.0-20241114-233100-73205d6
-stdlibWebsubhubVersion=1.13.0-20241116-124900-2bb76a4
+stdlibGrpcVersion=1.13.0-20241126-215800-1a63b04
+stdlibSoapVersion=2.2.0-20241127-102000-fc4e7db
+stdlibTransactionVersion=1.11.0-20241127-113000-c3f53c6
+stdlibWebsocketVersion=2.13.0-20241127-103500-476d1aa
+stdlibWebsubVersion=2.13.0-20241127-090200-25c84df
+stdlibWebsubhubVersion=1.13.0-20241127-090300-97f79fe
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.15.0-20241117-164000-4d95b39
-stdlibSqlVersion=1.15.0-20241116-124800-0bc6a40
+stdlibGraphqlVersion=1.15.0-20241127-145000-9be4f77
+stdlibSqlVersion=1.15.0-20241127-162900-c57df5b
 
 # Persist Tool
-persistToolVersion=1.4.0
+persistToolVersion=1.5.0-20241128-120100-1da2be3
 
 # Dev Tools
-devToolsVersion=2.0.0-20241128-132700-112f36c
+devToolsVersion=2.1.0-20241128-232800-96939e6
 ballerinaCommandVersion=1.4.3
 
 # API Doc UI
 docUiApi=https://api.dev-central.ballerina.io/2.0/docs/doc-ui
 
 # GraphQL Tool
-graphqlToolVersion=0.11.1-20241117-184300-39bc271
+graphqlToolVersion=0.12.0-20241128-093600-5948ff6
 
 # Protoc Tool
-protocToolVersion=0.3.0
+protocToolVersion=0.4.0-20241128-125500-66acf72
 
 # OpenAPI Module
-openapiToolVersion=2.1.0
+openapiToolVersion=2.2.0-20241127-220400-5c03618
 
 # AsyncAPI Module
-asyncapiToolVersion=0.9.0
+asyncapiToolVersion=0.10.0-20241128-143300-d509f06
 
-c2cVersion=3.1.0
+c2cVersion=3.2.0-20241128-063100-1c75035
 
 installerVersion=f7b952b2-f64b-45f0-ab86-df7d892ffc21
