--- a/.github/workflows/publish_release_bi.yml
+++ b/.github/workflows/publish_release_bi.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: '10.22.1'
       - name: Clone ballerina-dev-tools
-        run: git clone -b flow_model https://github.com/ballerina-platform/ballerina-dev-tools.git
+        run: git clone https://github.com/ballerina-platform/ballerina-dev-tools.git
       - name: Build ballerina-dev-tools
         id: build-dev-tools
         env:
@@ -121,14 +121,14 @@ jobs:
           tags: ballerina/ballerina:release-test
           build-args: |
             BALLERINA_DIST=ballerina-${{ steps.version-set.outputs.sversion }}.zip
-#      - name: Run Trivy vulnerability scanner
-#        uses: aquasecurity/trivy-action@master
-#        with:
-#          image-ref: 'ballerina/ballerina:release-test'
-#          skip-dirs: 'ballerina/runtime/examples'
-#          format: 'table'
-#          exit-code: '1'
-#          timeout: "10m0s"
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'ballerina/ballerina:release-test'
+          skip-dirs: 'ballerina/runtime/examples'
+          format: 'table'
+          exit-code: '1'
+          timeout: "10m0s"
       - name: cosign-installer
         uses: sigstore/cosign-installer@v3.5.0
       - name: Set up Node.js
