--- a/gradle.properties
+++ b/gradle.properties
@@ -96,6 +96,6 @@ openapiToolVersion=2.2.0-20241210-150200-7a1861e
 # AsyncAPI Module
 asyncapiToolVersion=0.10.0-20241210-145200-46cccc2
 
-c2cVersion=2.3.2
+c2cVersion=3.2.0-20241210-145600-aa8be0f
 
 installerVersion=f7b952b2-f64b-45f0-ab86-df7d892ffc21
