Set provenance to false in docker build push action

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -103,6 +103,7 @@ jobs:
           load: true
           push: false
           platforms: linux/amd64,linux/arm64
+          provenance: false
           tags: ballerina/ballerina:release-test
           build-args: |
             BALLERINA_DIST=ballerina-${{ steps.version-set.outputs.sversion }}.zip
