--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -100,9 +100,8 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: module-ballerina-docker/base/docker/
+          load: true
           push: false
-          platforms: linux/amd64,linux/arm64
-          provenance: false
           tags: ballerina/ballerina:release-test
           build-args: |
             BALLERINA_DIST=ballerina-${{ steps.version-set.outputs.sversion }}.zip
