Fix references in publish-release-artifacts workflow

--- a/.github/workflows/publish-release-artifacts.yml
+++ b/.github/workflows/publish-release-artifacts.yml
@@ -43,6 +43,7 @@ jobs:
           echo "::set-output name=version::$VERSION"
           echo "::set-output name=taggedVersion::$TAGGED_VERSION"
           echo "::set-output name=updateNumber::$UPDATE_NUMBER"
+          echo "::set-output name=longVersion::$LONG_VERSION"
 
       - name: Download artifacts
         run: |
@@ -117,37 +118,45 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Checkout Docker repo
-        uses: actions/checkout@v3
-        with:
-          repository: ballerina-platform/module-ballerina-docker
-          path: module-ballerina-docker
+      - name: Clone Docker Repo
+        id: process-docker
+        run: |
+          git clone --single-branch --branch master https://github.com/ballerina-platform/module-ballerina-docker
+          DOCKER_REPO='module-ballerina-docker'
+          echo "::set-output name=dockerRepo::$DOCKER_REPO"
 
-      - name: Copy zip artifact
-        run: cp ballerina/build/distributions/ballerina-22*.zip module-ballerina-docker/base/docker/
+      - name: Copy artifacts to Docker repo
+        run: |
+          DOCKER_REPO=${{ steps.process-docker.outputs.dockerRepo }}
+          cp $VERSION/ballerina-$VERSION.zip $DOCKER_REPO/base/docker/
+          cp $VERSION/ballerina-$LONG_VERSION-linux-x64.deb $DOCKER_REPO/base/devcontainer/
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Build and push the Ballerina Docker image
         id: docker_build
         uses: docker/build-push-action@v6
         with:
-          context: module-ballerina-docker/base/docker/
+          context: ${{ steps.process-docker.outputs.dockerRepo }}/base/docker/
           push: true
-          tags: ballerina/ballerina:$GIT_TAG
+          tags: ballerina/ballerina:${{ steps.set-version.outputs.taggedVersion }}
           platforms: linux/amd64,linux/arm64
           build-args: |
-            BALLERINA_DIST=ballerina-$VERSION.zip
+            BALLERINA_DIST=ballerina-${{ steps.set-version.outputs.version }}.zip
+
       - name: Build and push dev container image
         id: docker_build_devcontainer
         uses: docker/build-push-action@v6
         with:
-          context: module-ballerina-docker/base/devcontainer/
+          context: ${{ steps.process-docker.outputs.dockerRepo }}/base/devcontainer/
           push: true
-          tags: ballerina/ballerina-devcontainer:$GIT_TAG
+          tags: ballerina/ballerina-devcontainer:${{ steps.set-version.outputs.taggedVersion }}
           build-args: |
-            BALLERINA_DIST=ballerina-$LONG_VERSION-linux-x64.deb
+            BALLERINA_DIST=ballerina-${{ steps.set-version.outputs.longVersion }}-linux-x64.deb
 
       - name: Publish Artifacts
         run: |
