--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.8.9-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.8
+ballerinaLangVersion=2201.8.9-20241216-141900-4b4b2bed
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
