--- a/gradle.properties
+++ b/gradle.properties
@@ -96,6 +96,6 @@ openapiToolVersion=2.2.0-20241218-181000-435c981
 # AsyncAPI Module
 asyncapiToolVersion=0.10.0-20241218-193400-6e2c5ba
 
-c2cVersion=2.3.2
+c2cVersion=3.2.0-20241218-193400-1daf020
 
 installerVersion=f7b952b2-f64b-45f0-ab86-df7d892ffc21
