--- a/project-api-tests/src/test/resources/hierarchical-packages/PackageH.test.mod/Ballerina.toml
+++ b/project-api-tests/src/test/resources/hierarchical-packages/PackageH.test.mod/Ballerina.toml
@@ -3,3 +3,4 @@ org = "bctestorg"
 name = "PackageH.test.mod"
 version = "1.0.1"
 export = ["PackageH.test.mod.api", "PackageH.test.mod.api.doc"]
+readme = "Package.md"
