--- a/project-api-tests/src/test/resources/hierarchical-packages/Transitive.PackageH.test/Ballerina.toml
+++ b/project-api-tests/src/test/resources/hierarchical-packages/Transitive.PackageH.test/Ballerina.toml
@@ -3,3 +3,4 @@ org = "bctestorg"
 name = "Transitive.PackageH.test"
 version = "1.0.0"
 export = ["Transitive.PackageH.test"]
+readme = "Package.md"
