--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -238,7 +238,7 @@ jobs:
   project-api-tests:
 
     runs-on: ubuntu-latest
-    if: false
+    if: github.repository_owner == 'ballerina-platform'
 
     steps:
       - name: Checkout Repository
