Update lang version

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.8.9-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.9-20241217-161000-aa71436d
+ballerinaLangVersion=2201.8.9-20241220-005300-e0508d15
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
@@ -82,7 +82,7 @@ graphqlVersion=0.9.1
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.8.3
+openapiVersion=1.8.4-20241220-093800-0d5d459
 
 # AsyncAPI Module
 asyncapiVersion=0.7.1
