--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.8.10-SNAPSHOT
+version=2201.8.9-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.8.9-20241220-005300-e0508d15
+ballerinaLangVersion=2201.8.9
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2023R1
@@ -82,7 +82,7 @@ graphqlVersion=0.9.1
 protocToolVersion=0.2.0
 
 # OpenAPI Module
-openapiVersion=1.8.4-20241220-211400-ae57648
+openapiVersion=1.8.4
 
 # AsyncAPI Module
 asyncapiVersion=0.7.1
