--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -291,6 +291,14 @@ task copyOtherRepos(type: Copy) {
             into "lib/tools/lang-server/lib/"
         }
     }
+
+    /* Service Model Generator Artifacts */
+    configurations.devTools.resolvedConfiguration.resolvedArtifacts.each { artifact ->
+        def artifactExtractedPath = "${buildDir}/target/extracted-distributions/" + artifact.name + "-zip"
+        from("${artifactExtractedPath}/service-model-generator/ls-libs") {
+            into "lib/tools/lang-server/lib/"
+        }
+    }
 }
 
 task buildDistRepo(type: JavaExec) {
