--- a/.github/workflows/daily-build-2201.9.x.yml
+++ b/.github/workflows/daily-build-2201.9.x.yml
@@ -16,11 +16,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: 2201.9.x
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '21.0.3'
+          distribution: "temurin"
+          java-version: 17.0.7
       - name: Get daily docker version
         id: version
         run: echo "::set-output name=version::$(date +'%Y-%m-%d')"
@@ -229,11 +229,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 2201.9.x
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '21.0.3'
+          distribution: "temurin"
+          java-version: 17.0.7
       - name: Build with Gradle
         env:
           packageUser: ${{ github.actor }}
@@ -254,11 +254,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 2201.9.x
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '21.0.3'
+          distribution: "temurin"
+          java-version: 17.0.7
       - name: Build with Gradle
         env:
           packageUser: ${{ github.actor }}
@@ -278,11 +278,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 2201.9.x
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '21.0.3'
+          distribution: "temurin"
+          java-version: 17.0.7
       - name: Setup Files
         run: |
           cd /etc/yum.repos.d/
@@ -362,11 +362,11 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '21.0.3'
+          distribution: "temurin"
+          java-version: 17.0.7
       - name: Download MacOS-ARM Intaller Zip
         uses: actions/download-artifact@v4
         with:
@@ -401,11 +401,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 2201.9.x
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
-          java-version: '21.0.3'
+          distribution: "temurin"
+          java-version: 17.0.7
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '2.1.x'
