Temporary skip project-api tests in daily build

--- a/.github/workflows/daily-build-2201.11.x.yml
+++ b/.github/workflows/daily-build-2201.11.x.yml
@@ -222,7 +222,7 @@ jobs:
   project-api-tests:
 
     runs-on: ubuntu-latest
-    if: github.repository_owner == 'ballerina-platform'
+    if: false
 
     steps:
       - name: Checkout Repository
