--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -276,6 +276,14 @@ task copyOtherRepos(type: Copy) {
             into "lib/tools/lang-server/lib/"
         }
     }
+
+    /* Test Manager Service Artifacts */
+    configurations.devTools.resolvedConfiguration.resolvedArtifacts.each { artifact ->
+        def artifactExtractedPath = "${buildDir}/target/extracted-distributions/" + artifact.name + "-zip"
+        from("${artifactExtractedPath}/test-manager-service/ls-libs") {
+            into "lib/tools/lang-server/lib/"
+        }
+    }
 }
 
 task buildDistRepo(type: JavaExec) {
