Fix the download link of the publish release

--- a/.github/workflows/publish_release_bi.yml
+++ b/.github/workflows/publish_release_bi.yml
@@ -536,7 +536,7 @@ jobs:
                                 "text": "Download",
                                 "onClick": {
                                   "openLink": {
-                                    "url": "${{ needs.publish-release.outputs.upload-asset-url }}"
+                                    "url": "https://github.com/${{ github.repository }}/releases/tag/v${{ needs.publish-release.outputs.release-version }}"
                                   }
                                 }
                               }
