--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.11.0-SNAPSHOT
+version=2201.12.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.11.0
+ballerinaLangVersion=2201.12.0-20250220-175300-0350e62b
 ballerinaJreVersion=3.0.0
 dependencyJREVersion=jdk-21.0.5+11-jre
 specVersion=2024R1
