Upgrade versions for Update 12

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.11.0-SNAPSHOT
+version=2201.12.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.11.0
+ballerinaLangVersion=2201.12.0-20250221-092200-b3de4372
 ballerinaJreVersion=3.0.0
 dependencyJREVersion=jdk-21.0.5+11-jre
 specVersion=2024R1
@@ -79,7 +79,7 @@ persistToolVersion=1.5.0
 
 # Dev Tools
 devToolsVersion=2.0.0-20250129-200100-da6922f
-ballerinaCommandVersion=1.4.5
+ballerinaCommandVersion=1.5.0
 
 # API Doc UI
 docUiApi=https://api.dev-central.ballerina.io/2.0/docs/doc-ui
