Update openapi-tool and http module version

--- a/gradle.properties
+++ b/gradle.properties
@@ -59,7 +59,7 @@ stdlibTomlVersion=0.7.0
 stdlibYamlVersion=0.7.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.13.1
+stdlibHttpVersion=2.14.0-20250305-123400-5526ea0
 
 
 # Stdlib Level 06
@@ -91,7 +91,7 @@ graphqlToolVersion=0.13.0-20250224-143900-2f02f57
 protocToolVersion=0.4.0
 
 # OpenAPI Module
-openapiToolVersion=2.2.0
+openapiToolVersion=2.3.0-20250305-110300-caaef29
 
 # AsyncAPI Module
 asyncapiToolVersion=0.10.0
