Revert "Bump library timestamp versions for 2201.12.0"

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,89 +13,89 @@ balstdlibBranch=master
 devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
-stdlibIoVersion=1.8.0-20250304-133300-967a7a4
-stdlibJavaArraysVersion=1.6.0-20250304-133400-cd81789
-stdlibTimeVersion=2.7.0-20250304-133100-009bfd7
-stdlibUrlVersion=2.6.0-20250304-133100-78baea0
+stdlibIoVersion=1.7.0
+stdlibJavaArraysVersion=1.5.0
+stdlibTimeVersion=2.6.0
+stdlibUrlVersion=2.5.0
 stdlibXmldataVersion=2.9.0
-stdlibMathVectorVersion=1.2.0-20250304-132900-ec42e3c
-observeVersion=1.5.0-20250304-140800-d60274b
+stdlibMathVectorVersion=1.1.0
+observeVersion=1.4.0
 
 # Stdlib Level 02
-stdlibAvroVersion=1.2.0-20250305-165400-5507fbe
-stdlibConstraintVersion=1.7.0-20250305-165400-52275bd
-stdlibCryptoVersion=2.9.0-20250305-165500-b42b932
-stdlibDataXmldataVersion=1.3.0-20250305-171000-f3b37ca
-stdlibLogVersion=2.12.0-20250305-165600-b4606dd
-stdlibOsVersion=1.10.0-20250305-204300-3f8417d
-stdlibPersistVersion=1.6.0-20250305-165700-4c89ca9
-stdlibProtobufVersion=1.8.0-20250305-165700-19cfa8e
-stdlibRandomVersion=1.7.0-20250305-165400-16e4670
-stdlibTaskVersion=2.7.0-20250305-173600-1c8b667
-stdlibXsltVersion=2.9.0-20250305-172500-e0ae9b8
-observeInternalVersion=1.5.0-20250305-160800-51dc066
+stdlibAvroVersion=1.1.2
+stdlibConstraintVersion=1.6.0
+stdlibCryptoVersion=2.8.0
+stdlibDataXmldataVersion=1.2.2
+stdlibLogVersion=2.11.0
+stdlibOsVersion=1.9.0
+stdlibPersistVersion=1.5.0
+stdlibProtobufVersion=1.7.0
+stdlibRandomVersion=1.6.0
+stdlibTaskVersion=2.6.0
+stdlibXsltVersion=2.8.0
+observeInternalVersion=1.4.0
 
 # Stdlib Level 03
-stdlibCacheVersion=3.10.0-20250305-175000-1e05eb3
-stdlibFileVersion=1.12.0-20250305-204800-827a6c2
-stdlibFtpVersion=2.13.0-20250305-175300-d66c5f4
-stdlibLdapVersion=1.3.0-20250305-172500-be1c869
-stdlibMimeVersion=2.12.0-20250305-174800-8528404
-stdlibTcpVersion=1.13.0-20250305-175900-0ad1bb8
-stdlibUdpVersion=1.13.0-20250305-174700-85bca11
-stdlibUuidVersion=1.10.0-20250305-175100-746df53
+stdlibCacheVersion=3.9.0
+stdlibFileVersion=1.11.0
+stdlibFtpVersion=2.12.0
+stdlibLdapVersion=1.2.0
+stdlibMimeVersion=2.11.0
+stdlibTcpVersion=1.12.1
+stdlibUdpVersion=1.12.1
+stdlibUuidVersion=1.9.0
 
 # Stdlib Level 04
-stdlibAuthVersion=2.14.0-20250305-182200-ed0a9db
-stdlibDataCsvVersion=0.8.0-20250305-183700-a3aaa9c
-stdlibDataJsonDataVersion=1.1.0-20250305-182300-23e3c81
-stdlibDataYamlVersion=0.8.0-20250305-183600-f7ebcc7
-stdlibEdiVersion=1.5.0-20250305-182000-df3f678
-stdlibEmailVersion=2.12.0-20250305-181900-a54c86b
-stdlibJwtVersion=2.15.0-20250305-182000-1eefc7e
-stdlibMqttVersion=1.4.0-20250305-190400-9d9c31b
-stdlibOAuth2Version=2.14.0-20250305-182700-f5fb8ef
-stdlibTomlVersion=0.8.0-20250305-180400-1f79209
-stdlibYamlVersion=0.8.0-20250305-180800-6bcd76f
+stdlibAuthVersion=2.13.0
+stdlibDataCsvVersion=0.7.0
+stdlibDataJsonDataVersion=1.0.0
+stdlibDataYamlVersion=0.7.0
+stdlibEdiVersion=1.4.0
+stdlibEmailVersion=2.11.0
+stdlibJwtVersion=2.14.0
+stdlibMqttVersion=1.3.0
+stdlibOAuth2Version=2.13.0
+stdlibTomlVersion=0.7.0
+stdlibYamlVersion=0.7.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.14.0-20250305-195600-c559baa
+stdlibHttpVersion=2.14.0-20250305-123400-5526ea0
 
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.14.0-20250305-210500-3e0d20b
-stdlibSoapVersion=2.3.0-20250305-211700-81c5ebf
-stdlibTransactionVersion=1.12.0-20250305-224600-85e1cd7
-stdlibWebsocketVersion=2.14.0-20250305-221500-8b317d3
-stdlibWebsubVersion=2.14.0-20250305-212100-4e2b1c2
-stdlibWebsubhubVersion=1.15.0-20250305-211600-f0847d6
+stdlibGrpcVersion=1.13.1
+stdlibSoapVersion=2.2.0
+stdlibTransactionVersion=1.11.0
+stdlibWebsocketVersion=2.13.1
+stdlibWebsubVersion=2.13.0
+stdlibWebsubhubVersion=1.13.0
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.16.0-20250306-004000-9188ec2
-stdlibSqlVersion=1.16.0-20250306-064600-ff83996
+stdlibGraphqlVersion=1.16.0-20250224-140500-edb1413
+stdlibSqlVersion=1.15.0
 
 # Persist Tool
-persistToolVersion=1.6.0-20250306-170200-cdb845b
+persistToolVersion=1.5.0
 
 # Dev Tools
-devToolsVersion=2.0.0-20250306-200100-a5d4ad1
+devToolsVersion=2.0.0-20250224-144000-85bf18e
 ballerinaCommandVersion=1.5.0
 
 # API Doc UI
 docUiApi=https://api.dev-central.ballerina.io/2.0/docs/doc-ui
 
 # GraphQL Tool
-graphqlToolVersion=0.13.0-20250306-115500-e8968a4
+graphqlToolVersion=0.13.0-20250224-143900-2f02f57
 
 # Protoc Tool
-protocToolVersion=0.5.0-20250306-080600-7f47e9a
+protocToolVersion=0.4.0
 
 # OpenAPI Module
-openapiToolVersion=2.3.0-20250306-125300-8c627a2
+openapiToolVersion=2.3.0-20250305-110300-caaef29
 
 # AsyncAPI Module
-asyncapiToolVersion=0.11.0-20250306-121800-dc14d11
+asyncapiToolVersion=0.10.0
 
-c2cVersion=3.3.0-20250306-104600-d8c675a
+c2cVersion=3.2.0
 
 installerVersion=f7b952b2-f64b-45f0-ab86-df7d892ffc21
