--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ stdlibIoVersion=1.8.0-20250311-132600-1ffe624
 stdlibJavaArraysVersion=1.6.0-20250311-132500-d079f60
 stdlibTimeVersion=2.7.0-20250311-132600-1d5e2cb
 stdlibUrlVersion=2.6.0-20250311-132600-48fcfef
-stdlibXmldataVersion=2.9.1-20250311-132700-f1a0d02
+stdlibXmldataVersion=2.9.0
 stdlibMathVectorVersion=1.2.0-20250311-132500-0904714
 observeVersion=1.5.0-20250311-132700-a89f57a
 
@@ -96,6 +96,6 @@ openapiToolVersion=2.3.0-20250311-185300-b78db7a
 # AsyncAPI Module
 asyncapiToolVersion=0.11.0-20250311-205000-610f974
 
-c2cVersion=2.3.2
+c2cVersion=3.3.0-20250311-204900-f45adce
 
 installerVersion=f7b952b2-f64b-45f0-ab86-df7d892ffc21
