Update dependency versions for 2201.12.0 release

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.12.0-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.12.0-20250311-124800-b9003fed
+ballerinaLangVersion=2201.12.0
 ballerinaJreVersion=3.0.0
 dependencyJREVersion=jdk-21.0.5+11-jre
 specVersion=2024R1
@@ -13,89 +13,89 @@ balstdlibBranch=master
 devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
-stdlibIoVersion=1.8.0-20250311-132600-1ffe624
-stdlibJavaArraysVersion=1.6.0-20250311-132500-d079f60
-stdlibTimeVersion=2.7.0-20250311-132600-1d5e2cb
-stdlibUrlVersion=2.6.0-20250311-132600-48fcfef
+stdlibIoVersion=1.8.0
+stdlibJavaArraysVersion=1.6.0
+stdlibTimeVersion=2.7.0
+stdlibUrlVersion=2.6.0
 stdlibXmldataVersion=2.9.0
-stdlibMathVectorVersion=1.2.0-20250311-132500-0904714
-observeVersion=1.5.0-20250311-132700-a89f57a
+stdlibMathVectorVersion=1.2.0
+observeVersion=1.5.0
 
 # Stdlib Level 02
-stdlibAvroVersion=1.2.0-20250311-133300-6242b6b
-stdlibConstraintVersion=1.7.0-20250311-133400-acfb095
-stdlibCryptoVersion=2.9.0-20250311-133400-9758410
-stdlibDataXmldataVersion=1.3.0-20250311-135100-37a4719
-stdlibLogVersion=2.12.0-20250311-135900-9f3c638
-stdlibOsVersion=1.10.0-20250311-133500-7cc80f4
-stdlibPersistVersion=1.6.0-20250311-133500-893e077
-stdlibProtobufVersion=1.8.0-20250311-133500-2e523f0
-stdlibRandomVersion=1.7.0-20250311-134500-6be5f1c
-stdlibTaskVersion=2.7.0-20250311-133800-5ee5469
-stdlibXsltVersion=2.9.0-20250311-133500-823aa4b
-observeInternalVersion=1.5.0-20250311-133700-3a1a70b
+stdlibAvroVersion=1.2.0
+stdlibConstraintVersion=1.7.0
+stdlibCryptoVersion=2.9.0
+stdlibDataXmldataVersion=1.3.0
+stdlibLogVersion=2.12.0
+stdlibOsVersion=1.10.0
+stdlibPersistVersion=1.6.0
+stdlibProtobufVersion=1.8.0
+stdlibRandomVersion=1.7.0
+stdlibTaskVersion=2.7.0
+stdlibXsltVersion=2.9.0
+observeInternalVersion=1.5.0
 
 # Stdlib Level 03
-stdlibCacheVersion=3.10.0-20250311-135100-8197b04
-stdlibFileVersion=1.12.0-20250311-141500-7227a78
-stdlibFtpVersion=2.13.0-20250311-141600-8ceb418
-stdlibLdapVersion=1.3.0-20250311-135100-25b253d
-stdlibMimeVersion=2.12.0-20250311-141300-98bc7d6
-stdlibTcpVersion=1.13.0-20250311-141600-fdbda98
-stdlibUdpVersion=1.13.0-20250311-141500-6cf4cb7
-stdlibUuidVersion=1.10.0-20250311-135800-d38a5b5
+stdlibCacheVersion=3.10.0
+stdlibFileVersion=1.12.0
+stdlibFtpVersion=2.13.0
+stdlibLdapVersion=1.3.0
+stdlibMimeVersion=2.12.0
+stdlibTcpVersion=1.13.0
+stdlibUdpVersion=1.13.0
+stdlibUuidVersion=1.10.0
 
 # Stdlib Level 04
-stdlibAuthVersion=2.14.0-20250311-141100-33e5fab
-stdlibDataCsvVersion=0.8.0-20250311-142800-554ab60
-stdlibDataJsonDataVersion=1.1.0-20250311-142600-b238ecb
-stdlibDataYamlVersion=0.8.0-20250311-135100-c3e2e68
-stdlibEdiVersion=1.5.0-20250311-142500-6efa14e
-stdlibEmailVersion=2.12.0-20250311-142800-0a0c358
-stdlibJwtVersion=2.15.0-20250311-141300-b5b284e
-stdlibMqttVersion=1.4.0-20250311-141700-dab28dc
-stdlibOAuth2Version=2.14.0-20250311-141600-1d12813
-stdlibTomlVersion=0.8.0-20250311-142600-94d1016
-stdlibYamlVersion=0.8.0-20250311-142600-9f8fdef
+stdlibAuthVersion=2.14.0
+stdlibDataCsvVersion=0.8.0
+stdlibDataJsonDataVersion=1.1.0
+stdlibDataYamlVersion=0.8.0
+stdlibEdiVersion=1.5.0
+stdlibEmailVersion=2.12.0
+stdlibJwtVersion=2.15.0
+stdlibMqttVersion=1.4.0
+stdlibOAuth2Version=2.14.0
+stdlibTomlVersion=0.8.0
+stdlibYamlVersion=0.8.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.14.0-20250311-152000-c0b9408
+stdlibHttpVersion=2.14.0
 
 
 # Stdlib Level 06
-stdlibGrpcVersion=1.14.0-20250311-161400-4026c1c
-stdlibSoapVersion=2.3.0-20250311-160400-1d58445
-stdlibTransactionVersion=1.12.0-20250311-162400-80aee90
-stdlibWebsocketVersion=2.14.0-20250311-162600-6665a39
-stdlibWebsubVersion=2.14.0-20250311-161100-17d5bd3
-stdlibWebsubhubVersion=1.15.0-20250311-163100-935aa3c
+stdlibGrpcVersion=1.14.0
+stdlibSoapVersion=2.3.0
+stdlibTransactionVersion=1.12.0
+stdlibWebsocketVersion=2.14.0
+stdlibWebsubVersion=2.14.0
+stdlibWebsubhubVersion=1.15.0
 
 # Stdlib Level 07
-stdlibGraphqlVersion=1.16.0-20250311-171800-25e7076
-stdlibSqlVersion=1.16.0-20250311-170200-3f86df9
+stdlibGraphqlVersion=1.16.0
+stdlibSqlVersion=1.16.0
 
 # Persist Tool
-persistToolVersion=1.6.0-20250311-221800-a2e253f
+persistToolVersion=1.6.0
 
 # Dev Tools
-devToolsVersion=2.0.0-20250311-230700-1ae7c86
+devToolsVersion=2.0.0
 ballerinaCommandVersion=1.5.0
 
 # API Doc UI
 docUiApi=https://api.dev-central.ballerina.io/2.0/docs/doc-ui
 
 # GraphQL Tool
-graphqlToolVersion=0.13.0-20250311-175000-55fc0c0
+graphqlToolVersion=0.13.0
 
 # Protoc Tool
-protocToolVersion=0.5.0-20250306-080600-7f47e9a
+protocToolVersion=0.5.0
 
 # OpenAPI Module
-openapiToolVersion=2.3.0-20250311-185300-b78db7a
+openapiToolVersion=2.3.0
 
 # AsyncAPI Module
-asyncapiToolVersion=0.11.0-20250311-205000-610f974
+asyncapiToolVersion=0.11.0
 
-c2cVersion=3.3.0-20250311-204900-f45adce
+c2cVersion=3.3.0
 
 installerVersion=f7b952b2-f64b-45f0-ab86-df7d892ffc21
