--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.10.5-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.10.4
+ballerinaLangVersion=2201.10.5-20250421-114800-f060a29e
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
@@ -13,7 +13,7 @@ balstdlibBranch=master
 devIdpUrl=https://dev.api.asgardeo.io/oauth2/token/.well-known/openid-configuration
 
 # Stdlib Level 01
-stdlibIoVersion=1.6.1
+stdlibIoVersion=1.6.3
 stdlibJavaArraysVersion=1.4.0
 stdlibTimeVersion=2.5.0
 stdlibUrlVersion=2.4.0
@@ -58,7 +58,7 @@ stdlibTomlVersion=0.6.0
 stdlibYamlVersion=0.6.0
 
 # Stdlib Level 05
-stdlibHttpVersion=2.12.6
+stdlibHttpVersion=2.12.9
 
 
 # Stdlib Level 06
