--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.caching=true
 group=org.ballerinalang
 # During the release workflow, the following will get bumped automatically
-version=2201.13.0-SNAPSHOT
+version=2201.13.0-m1
 codeName=swan-lake
 
-ballerinaLangVersion=2201.12.2
+ballerinaLangVersion=2201.13.0-m1
 ballerinaJreVersion=3.0.0
 dependencyJREVersion=jdk-21.0.5+11-jre
 specVersion=2024R1
@@ -69,6 +69,7 @@ stdlibTransactionVersion=1.12.0
 stdlibWebsocketVersion=2.14.0
 stdlibWebsubVersion=2.14.0
 stdlibWebsubhubVersion=1.15.0
+stdlibNpVersion=0.3.0
 
 # Stdlib Level 07
 stdlibGraphqlVersion=1.16.0
