--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ group=org.ballerinalang
 version=2201.10.5-SNAPSHOT
 codeName=swan-lake
 
-ballerinaLangVersion=2201.10.5-20250423-113600-4aa7c853
+ballerinaLangVersion=2201.10.5
 ballerinaJreVersion=2.0.0
 dependencyJREVersion=jdk-17.0.7+7-jre
 specVersion=2024R1
